--- a/Numpy_Tutorial.ipynb
+++ b/Numpy_Tutorial.ipynb
@@ -3,10 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Numpy Tutorial.ipynb",
+      "name": " Numpy Tutorial.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -14,30 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/iharshgaur/A-to-Z-Resources-for-Students/blob/master/Numpy_Tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "v3UUQkVko68G",
-        "colab_type": "text"
-      },
-      "source": [
-        "Section 1 of:\n",
-        "\n",
-        "https://www.udemy.com/deep-learning-prerequisites-the-numpy-stack-in-python/\n",
-        "\n",
-        "https://deeplearningcourses.com/c/deep-learning-prerequisites-the-numpy-stack-in-python"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
