--- a/Scipy_Tutorial.ipynb
+++ b/Scipy_Tutorial.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Scipy Tutorial.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -20,19 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/iharshgaur/A-to-Z-Resources-for-Students/blob/master/Scipy_Tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "VHEz_wBnp_RZ",
-        "colab_type": "text"
-      },
-      "source": [
-        "Section 4 of:\n",
-        "\n",
-        "https://deeplearningcourses.com/c/deep-learning-prerequisites-the-numpy-stack-in-python"
+        "<a href=\"https://colab.research.google.com/github/iharshgaur/MLPrerequisites/blob/master/Scipy_Tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
